--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -418,8 +418,6 @@ assets.mekanism.textures.items.TinIngot = *project*
 assets.mekanism.textures.items.TinShard = *project*
 assets.mekanism.textures.items.UltimateControlCircuit = *project*
 assets.mekanism.textures.items.WoodPaxel = *project*
-assets.minecraft.texts.credits = *project*
-assets.minecraft.texts.end = *project*
 assets.minecraft.texts.splashes = *project*
 assets.minecraft.textures.blocks.anvil_base = *project*
 assets.minecraft.textures.blocks.anvil_top_damaged_0 = *project*
@@ -2322,3 +2320,146 @@ assets.galacticraftcore.textures.items.basicItem%drawSilicon = *project*
 assets.galacticraftcore.textures.model.teledish = *vanilla*
 assets.galacticraftcore.textures.model.telefork = *vanilla*
 assets.galacticraftcore.textures.model.telesupport = *vanilla*
+assets.mekanism.render.atomicdisassembler = *project*
+assets.mekanism.render.balloon = *project*
+assets.mekanism.render.energycubeadvanced = *project*
+assets.mekanism.render.energycubebasic = *project*
+assets.mekanism.render.energycubecreative = *project*
+assets.mekanism.render.energycubeelite = *project*
+assets.mekanism.render.energycubeultimate = *project*
+assets.mekanism.render.flame = *project*
+assets.mekanism.render.flamethrower = *project*
+assets.mekanism.render.fluidicplenisher = *project*
+assets.mekanism.render.freerunners = *project*
+assets.mekanism.render.jetpack = *project*
+assets.mekanism.render.obsidiantnt = *project*
+assets.mekanism.render.personalchest = *project*
+assets.mekanism.render.quantumentangloporter = *project*
+assets.mekanism.render.quantumentangloporter_overlay = *project*
+assets.mekanism.render.robit = *project*
+assets.mekanism.render.robit2 = *project*
+assets.mekanism.render.scubaset = *project*
+assets.mekanism.render.transporterbox = *project*
+assets.mekanism.sounds.jetpack = *project*
+assets.mekanism.textures.blocks.bronzeblock = *project*
+assets.mekanism.textures.blocks.cardboardboxside = *project*
+assets.mekanism.textures.blocks.cardboardboxsidestorage = *project*
+assets.mekanism.textures.blocks.cardboardboxtop = *project*
+assets.mekanism.textures.blocks.coalblock = *project*
+assets.mekanism.textures.blocks.copperblock = *project*
+assets.mekanism.textures.blocks.copperore = *project*
+assets.mekanism.textures.blocks.glowplasticblock = *project*
+assets.mekanism.textures.blocks.laser = *vanilla*
+assets.mekanism.textures.blocks.osmiumblock = *project*
+assets.mekanism.textures.blocks.osmiumore = *project*
+assets.mekanism.textures.blocks.plasticblock = *project*
+assets.mekanism.textures.blocks.plasticfence = *project*
+assets.mekanism.textures.blocks.pressuredisperser = *project*
+assets.mekanism.textures.blocks.refinedglowstone = *project*
+assets.mekanism.textures.blocks.refinedobsidian = *project*
+assets.mekanism.textures.blocks.reinforcedplasticblock = *project*
+assets.mekanism.textures.blocks.roadplasticblock = *project*
+assets.mekanism.textures.blocks.saltblock = *project*
+assets.mekanism.textures.blocks.slickplasticblock = *project*
+assets.mekanism.textures.blocks.steelblock = *project*
+assets.mekanism.textures.blocks.steelcasing = *project*
+assets.mekanism.textures.blocks.tinblock = *project*
+assets.mekanism.textures.blocks.tinore = *project*
+assets.minecraft.textures.entity.bed.black = *project*
+assets.minecraft.textures.entity.bed.blue = *project*
+assets.minecraft.textures.entity.bed.brown = *project*
+assets.minecraft.textures.entity.bed.cyan = *project*
+assets.minecraft.textures.entity.bed.gray = *project*
+assets.minecraft.textures.entity.bed.green = *project*
+assets.minecraft.textures.entity.bed.light_blue = *project*
+assets.minecraft.textures.entity.bed.lime = *project*
+assets.minecraft.textures.entity.bed.magenta = *project*
+assets.minecraft.textures.entity.bed.orange = *project*
+assets.minecraft.textures.entity.bed.pink = *project*
+assets.minecraft.textures.entity.bed.purple = *project*
+assets.minecraft.textures.entity.bed.red = *project*
+assets.minecraft.textures.entity.bed.silver = *project*
+assets.minecraft.textures.entity.bed.white = *project*
+assets.minecraft.textures.entity.bed.yellow = *project*
+assets.minecraft.textures.entity.shield.base = *vanilla*
+assets.minecraft.textures.entity.shield.border = *vanilla*
+assets.minecraft.textures.entity.shield.bricks = *vanilla*
+assets.minecraft.textures.entity.shield.circle = *vanilla*
+assets.minecraft.textures.entity.shield.creeper = *vanilla*
+assets.minecraft.textures.entity.shield.cross = *vanilla*
+assets.minecraft.textures.entity.shield.curly_border = *vanilla*
+assets.minecraft.textures.entity.shield.diagonal_left = *vanilla*
+assets.minecraft.textures.entity.shield.diagonal_right = *vanilla*
+assets.minecraft.textures.entity.shield.diagonal_up_left = *vanilla*
+assets.minecraft.textures.entity.shield.diagonal_up_right = *vanilla*
+assets.minecraft.textures.entity.shield.flower = *vanilla*
+assets.minecraft.textures.entity.shield.gradient = *vanilla*
+assets.minecraft.textures.entity.shield.gradient_up = *vanilla*
+assets.minecraft.textures.entity.shield.half_horizontal = *vanilla*
+assets.minecraft.textures.entity.shield.half_horizontal_bottom = *vanilla*
+assets.minecraft.textures.entity.shield.half_vertical = *vanilla*
+assets.minecraft.textures.entity.shield.half_vertical_right = *vanilla*
+assets.minecraft.textures.entity.shield.mojang = *vanilla*
+assets.minecraft.textures.entity.shield.rhombus = *vanilla*
+assets.minecraft.textures.entity.shield.skull = *vanilla*
+assets.minecraft.textures.entity.shield.small_stripes = *vanilla*
+assets.minecraft.textures.entity.shield.square_bottom_left = *vanilla*
+assets.minecraft.textures.entity.shield.square_bottom_right = *vanilla*
+assets.minecraft.textures.entity.shield.square_top_left = *vanilla*
+assets.minecraft.textures.entity.shield.square_top_right = *vanilla*
+assets.minecraft.textures.entity.shield.straight_cross = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_bottom = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_center = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_downleft = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_downright = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_left = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_middle = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_right = *vanilla*
+assets.minecraft.textures.entity.shield.stripe_top = *vanilla*
+assets.minecraft.textures.entity.shield.triangle_bottom = *vanilla*
+assets.minecraft.textures.entity.shield.triangle_top = *vanilla*
+assets.minecraft.textures.entity.shield.triangles_bottom = *vanilla*
+assets.minecraft.textures.entity.shield.triangles_top = *vanilla*
+assets.minecraft.textures.entity.lead_knot = *project*
+assets.minecraft.textures.entity.shield_base = *project*
+assets.minecraft.textures.entity.shield_base_nopattern = *project*
+assets.minecraft.textures.entity.sweep = *vanilla*
+assets.minecraft.textures.items.banner_overlay = *project*
+assets.minecraft.textures.items.barrier = *vanilla*
+assets.minecraft.textures.items.elytra = *project*
+assets.minecraft.textures.items.end_crystal = *project*
+assets.minecraft.textures.items.knowledge_book = *project*
+assets.minecraft.textures.items.map_filled_markings = *project*
+assets.minecraft.textures.items.name_tag = *project*
+assets.minecraft.textures.items.nether_star = *project*
+assets.minecraft.textures.items.nether_wart = *project*
+assets.minecraft.textures.items.netherbrick = *project*
+assets.minecraft.textures.items.painting = *project*
+assets.minecraft.textures.items.paper = *project*
+assets.minecraft.textures.items.porkchop_cooked = *project*
+assets.minecraft.textures.items.porkchop_raw = *project*
+assets.minecraft.textures.items.potato = *project*
+assets.minecraft.textures.items.potato_baked = *project*
+assets.minecraft.textures.items.potato_poisonous = *project*
+assets.minecraft.textures.items.potion_bottle_drinkable = *project*
+assets.minecraft.textures.items.potion_bottle_empty = *project*
+assets.minecraft.textures.items.potion_bottle_lingering = *project*
+assets.minecraft.textures.items.potion_bottle_splash = *project*
+assets.minecraft.textures.items.prismarine_crystals = *project*
+assets.minecraft.textures.items.prismarine_shard = *project*
+assets.minecraft.textures.items.pumpkin_pie = *project*
+assets.minecraft.textures.items.quartz = *project*
+assets.minecraft.textures.items.record_11 = *project*
+assets.minecraft.textures.items.record_13 = *project*
+assets.minecraft.textures.items.record_blocks = *project*
+assets.minecraft.textures.items.record_cat = *project*
+assets.minecraft.textures.items.record_chirp = *project*
+assets.minecraft.textures.items.record_far = *project*
+assets.minecraft.textures.items.record_mall = *project*
+assets.minecraft.textures.items.record_mellohi = *project*
+assets.minecraft.textures.items.record_stal = *project*
+assets.minecraft.textures.items.record_strad = *project*
+assets.minecraft.textures.items.record_wait = *project*
+assets.minecraft.textures.items.record_ward = *project*
+assets.minecraft.textures.items.reeds = *project*
+assets.minecraft.textures.items.ruby = *vanilla*
