--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -9,7 +9,6 @@ assets.mekanism.armor = *project*
 assets.mekanism.infuse = *project*
 assets.mekanism.lang = *project*
 assets.mekanism.particles = *vanilla*
-assets.mekanism.render = *project*
 assets.mekanism.sounds = *vanilla*
 assets.minecraft.textures.effect = *project*
 assets.ironchest = *project*
@@ -93,3 +92,26 @@ assets.mekanism.textures.blocks.fuelwood_heater = *project*
 assets.realms = *vanilla*
 assets.galacticraftcore.textures.misc.planets = *project*
 assets.galacticraftcore.textures.model.armor = *project*
+assets.minecraft.textures.entity.armorstand = *project*
+assets.minecraft.textures.entity.banner = *vanilla*
+assets.minecraft.textures.entity.bed = *project*
+assets.minecraft.textures.entity.cat = *project*
+assets.minecraft.textures.entity.chest = *project*
+assets.minecraft.textures.entity.cow = *project*
+assets.minecraft.textures.entity.creeper = *project*
+assets.minecraft.textures.entity.endercrystal = *project*
+assets.minecraft.textures.entity.enderdragon = *project*
+assets.minecraft.textures.entity.enderman = *project*
+assets.minecraft.textures.entity.ghast = *project*
+assets.minecraft.textures.entity.horse.armor = *project*
+assets.minecraft.textures.entity.pig = *project*
+assets.minecraft.textures.entity.projectiles = *project*
+assets.minecraft.textures.entity.sheep = *project*
+assets.minecraft.textures.entity.shield = *vanilla*
+assets.minecraft.textures.entity.skeleton = *project*
+assets.minecraft.textures.entity.slime = *project*
+assets.minecraft.textures.entity.spider = *project*
+assets.minecraft.textures.entity.villager = *project*
+assets.minecraft.textures.entity.wither = *project*
+assets.minecraft.textures.entity.wolf = *project*
+assets.minecraft.textures.entity.zombie = *project*
